[project]
name = "comfyui-sd3.5-latent-size-picker"
description = "A universal node for generating empty latent tensors with support for SD3.5, SDXL, and Flux models. Features extended aspect ratio support, batch processing, and flexible dimension overrides."
version = "2.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/theshubzworld/ComfyUI-SD3.5-Latent-Size-Picker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shubzworld"
DisplayName = "ComfyUI-SD3.5-Latent-Size-Picker"
Icon = ""